# Programmatic-PID

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_INSTRUCTIONS.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  SPEC.md  dev-requirements.txt  mypy.ini  pyproject.toml  requirements-lock.txt  requirements.txt
assessments/: 2026-04-26-A-project-organization.md  2026-04-26-B-documentation.md  2026-04-26-C-testing.md  2026-04-26-D-defensive-code.md  2026-04-26-E-performance.md  2026-04-26-F-code-quality.md  2026-04-26-G-dependencies.md  2026-04-26-H-security.md  2026-04-26-I-configuration.md  2026-04-26-J-observability.md  2026-04-26-K-maintainability.md  2026-04-26-L-ci-cd.md  2026-04-26-M-deployment.md  2026-04-26-N-legal.md  2026-04-26-O-agentic-usability.md  2026-04-26-comprehensive-assessment.json  2026-04-26-comprehensive-assessment.md  created_issues.json
config/: example_controller.yaml
python/: __init__.py
schema/: pid_spec.schema.json
scripts/: check_ci_policy.py  run_simulation.py
tests/: conftest.py  test_cli.py  test_controls.py  test_document.py  test_dxf_builder.py  test_dxf_builder_helpers.py  test_dxf_submodules.py  test_equipment.py  test_geometry.py  test_instruments.py  test_layout.py  test_pid_controller.py  test_pid_generation.py  test_pid_integration.py  test_profiles.py  test_refactored_core.py  test_refactored_generator.py  test_refactored_modules.py  test_rendering.py  test_simulation.py  test_spec_loader.py  test_stream_router.py  test_streams.py  test_title_block.py  test_types.py  test_validation.py
(+120 files in other folders)
